# CodeKatas

./: README.md  pyproject.toml
shopping_cart/: README.md  main.py  pyproject.toml
shopping_cart/models/: __init__.py  cart.py  catalog.py  product.py
shopping_cart/products/: catalog.json
shopping_cart/tests/: test_cart.py  test_discount.py  test_product.py
