[tool.poetry]
name = "shopping-cart"
version = "0.1.0"
description = ""
authors = ["Ross Graham <ross.graham@hymans.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
